Fix overflow-x, add icons to home, change navbar styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,19 @@
 .App {
-  /* text-align: center; */
-  /* background-image: linear-gradient(to top, #5ee7df 0%, #b490ca 100%); */
-  /* height: 100%; */
-  position: relative;
-  right:0;
-  top:0;
-  height:100%;
-  width:100%;
+  right: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
   z-index: 1000;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 .navbar {
   z-index: 1000;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 992px) {
   .navbar {
     visibility: hidden;
     clear: both;
