--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -2,7 +2,7 @@
   background-image: linear-gradient(to top, #5ee7df 0%, #b490ca 100%);
   /* background-image: linear-gradient(to top, rgb(23,42, 69) 0%, #30122d 100%); */
   height: 100%;
-  width: 100%;
+  /* width: 100%; */
   position: relative;
   min-height: 100vh;
   display: flex;
@@ -17,4 +17,8 @@
   text-align: center;
   font-size: 60vw;
   font-family: 'Courier New', Courier, monospace;
+}
+
+.social-icons {
+  z-index: 501;
 }
