--- a/src/components/navigation/TopNavBar.css
+++ b/src/components/navigation/TopNavBar.css
@@ -1,10 +1,8 @@
 .navbar-main {
   background-color: rgb(23, 42, 69);
-}
-
-.navbar-main {
   color: rgb(136, 146, 176);
 }
+
 
 .home-button:hover {
   cursor: pointer;
